hphp/test/slow/parser/empty-files/empty-invalid.php.expectf
Fatal error: `<?hhx` is not a valid script marker. Use `<?hh` to start a Hack file. in %s/test/slow/parser/empty-files/empty-invalid.php on line 1
